# syncer-desktop

./: .env.example  .gitignore  AUTHENTICATION.md  bun.lockb  index.html  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  axios_interceptor.tsx  index.css  main.tsx  routeTree.gen.ts  schemas.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/protos/: syncer.proto
src-tauri/src/: lib.rs  main.rs  state.rs  syncer.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: syncer.rs
src-tauri/src/core/: tls.rs
src-tauri/src/grpc/: message_client.rs  mod.rs
src/components/custom/: loading-component.tsx  navbar.tsx  ripple-grid.tsx
src/components/ui/: banner.tsx  input.tsx
src/context/: app_data_context.tsx
src/hooks/: useAuthentication.tsx  useClipboard.tsx  useTauriStore.tsx
src/lib/: client.ts  constants.ts  logger.ts  public-routes.ts
src/lib/actions/: getAuthData.ts  useStore.ts
src/lib/context/: auth-context.tsx  grpc-context.tsx
src/lib/hooks/: useAuthState.ts  useGetAuthToken.ts  useLogin.tsx  useRouteInfo.ts  useStore.tsx  useToken.ts
src/lib/interfaces/: auth.ts  errors.ts  message.ts  syncer.ts  token.ts
src/lib/providers/: auth-context.tsx
src/lib/zod/: auth-schema.ts
src/routes/: __root.tsx  _homescreen.tsx  index.tsx  login.tsx  me.tsx
src/routes/_auth/: _auth.login.tsx  _auth.tsx
src/routes/_home/: dashboard.tsx  devices.tsx
src/routes/devices/: $deviceId.tsx  (+1 more)
(+14 files in other folders)
