[package]
name = "syncer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "syncer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.1"
tonic = { version = "0.13", features= ["_tls-any"] }
prost = "0.13"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
prost-codec = "=0.3.0"
prost-types = "0.14.1"
uuid = { version = "1.18.0", features = ["v4"] }
tauri-plugin-store = "2"
serde_with = "3.15.0"
dotenv = "0.15.0"

